cmake_minimum_required(VERSION 3.14)

project(Session12 LANGUAGES C)

# Create separate executables for each C file
add_executable(file_00 src/file_00.c)
add_executable(file_ex1 src/file_ex1.c)
add_executable(file_ex2 src/file_ex2.c)
add_executable(file_ex3 src/file_ex3.c)
add_executable(file_ex4 src/file_ex4.c)
add_executable(file_ex5 src/file_ex5.c)
add_executable(file_ex6 src/file_ex6.c)
add_executable(file_ex7 src/file_ex7.c)
add_executable(file_ex8 src/file_ex8.c)
add_executable(file_ex9 src/file_ex9.c)
