cmake_minimum_required(VERSION 3.14)

project(Session12 LANGUAGES C)

# Create separate executables for each C file
add_executable(file_00 file_00.c)
add_executable(file_ex1 file_ex1.c)
add_executable(file_ex2 file_ex2.c)
add_executable(file_ex3 file_ex3.c)
add_executable(file_ex4 file_ex4.c)
add_executable(file_ex5 file_ex5.c)
add_executable(file_ex6 file_ex6.c)
add_executable(file_ex7 file_ex7.c)
add_executable(file_ex8 file_ex8.c)
